# ipc_hodgepogdge

./: CMakeLists.txt  LICENSE  main.cpp  run_ipc_copy.sh  run_ipc_copy2.sh  run_ipc_copy3.sh  run_server.sh
app/buffer/: buffer.cmake  buffer.cpp  buffer.h
app/copier/: copier.cmake  copier.cpp  copier.h
app/definitions/: definitions.cmake  definitions.h
app/file_handler/: file_handler.cpp  file_handler.h
app/shared_memory_facade/: shared_memory_facade.cmake  shared_memory_facade.cpp  shared_memory_facade.h
app/synchronizer/: synchronizer.cmake  synchronizer.cpp  synchronizer.h
app/synchronizer/semaphore_proxy/: semaphore_proxy.cmake  semaphore_proxy.cpp  semaphore_proxy.h
app/timer/: timer.cpp  timer.h
buffer/: buffer.cmake  buffer.h
buffer_rotator/: buffer_rotator.cmake  buffer_rotator.cpp  buffer_rotator.h
data/: source.txt
file_handler/: file_handler.cmake  file_handler.h
scripts/: class.sh
shared_memory_handler/: shared_memory_handler.cmake  shared_memory_handler.cpp  shared_memory_handler.h
timer/: timer.cmake  timer.h
